# nn-vib

./: .gitignore  AGENT.md  PLAN.md  README.md  TRAINING_LOG.md  cnn_run.sh  compute_visualize.py  data.py  hyperparam_sweep.sh  lenet_300_100_mnist.py  max_robustness_show.py  mlp_ib_seed_sweep.sh  mlp_run.sh  mrsync.sh  mrun.sh  msc.py  pyproject.toml  run_inspects.sh  vib_fused.cu  vib_lenet_300_100_mnist.py  vib_lenet_300_100_prune_testing.ipynb  vib_mlp_mnist.py  vib_mlp_mnist_inspect.ipynb  vib_mlp_mnist_inspect.py  vib_mlp_mnist_train.py
cnn/: inspect_cnn_ib.py
final_mlp_save_stats_weights/: mlp_pruning_report_col.json  mlp_pruning_report_row.json
mlp/: inspect_mlp_ib.py  mlp_ib.py
msc/: ib_plot.py  plotting.py
nn-pruning/: inference.py  main.py  model.py  pyproject.toml  train.py
old_src/: compute_visualize.py  msc.py  svd.py  svd_pruning.py  vib_mnist_inspect.py  vib_mnist_pca.py  vib_mnist_train.py
plots/: mlp_pruning_report_outgoing.json  vibnet_computational_graph
src/: analyze_mlp_ib_logvar.py  cnn_ib.py  inspect_cnn_ib.py  inspect_layers.py  inspect_mlp_ib.py  inspect_mlp_ib_v2.py  lenet_300_100_mnist.py  mlp_fm.py  mlp_ib.py  mlp_mnist_train.py  models.py  msc.py  plot_cnn_pruning_robustness.py  plot_mlp2_accuracy_pruning.py  plot_mlp_ib.py  plot_mlp_pruning_robustness.py  summarize_cnn_beta0_acc.py  summarize_mlp_beta0_acc.py  svd_pruning.py  train.py  vib_mlp_mnist_inspect.py  vib_mlp_mnist_pca.py  vib_mlp_mnist_train.py  vib_mnist_inspect.py  vib_mnist_pca.py  vib_mnist_train.py  vinfo_ib_mlp_mnist.py  weights_heat_map_mlp_ib.py
(+365 files in other folders)
