[project]
name = "nn-vib"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
]

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
quote-style = "double"
